--- a/ess7_eq_Diff.html
+++ b/ess7_eq_Diff.html
@@ -14637,12 +14637,9 @@ $$
 
 
 Dall’annullarsi dei coefficienti di ogni potenza di $z$ si ottiene la relazione di ricorrenza
-$$<p>(n+2)(n+1)a_{n+2} + \omega^2 a_n = 0,
-$$
-ossia
-$$
-a_{n+2} = -\frac{\omega^2}{(n+2)(n+1)} a_n.
-$$</p>
+$$<p>(n+2)(n+1)a_{n+2} + \omega^2 a_n = 0, $$
+<p> ossia </p> 
+$$ a_{n+2} = -\frac{\omega^2}{(n+2)(n+1)} a_n. $$ </p>
 <hr />
 <h3 id="Coefficienti-pari-e-dispari">Coefficienti pari e dispari<a class="anchor-link" href="#Coefficienti-pari-e-dispari">&#182;</a></h3><p>La relazione di ricorrenza collega solo coefficienti della stessa parità.</p>
 <p><strong>Coefficienti pari</strong>
