--- a/ess7_eq_Diff.html
+++ b/ess7_eq_Diff.html
@@ -14630,16 +14630,19 @@ u''(z) = \sum_{n=0}^{\infty} (n+2)(n+1)a_{n+2} z^n.
 $$</p>
 <p>Sostituendo nell’equazione differenziale:
 $$
-\sum_{n=0}^{\infty} (n+2)(n+1)a_{n+2} z^n $$ </p>
+\sum_{n=0}^{\infty} (n+2)(n+1)a_{n+2} z^n</p>
 <ul>
-<li> $$ \omega^2 \sum_{n=0}^{\infty} a_n z^n = 0. $$ </li>
+<li>\omega^2 \sum_{n=0}^{\infty} a_n z^n = 0.</li>
 </ul>
-
+$$
 
 Dall’annullarsi dei coefficienti di ogni potenza di $z$ si ottiene la relazione di ricorrenza
-$$<p>(n+2)(n+1)a_{n+2} + \omega^2 a_n = 0, $$
-<p> ossia </p> 
-$$ a_{n+2} = -\frac{\omega^2}{(n+2)(n+1)} a_n. $$ </p>
+$$<p>(n+2)(n+1)a_{n+2} + \omega^2 a_n = 0,
+$$
+ossia
+$$
+a_{n+2} = -\frac{\omega^2}{(n+2)(n+1)} a_n.
+$$</p>
 <hr />
 <h3 id="Coefficienti-pari-e-dispari">Coefficienti pari e dispari<a class="anchor-link" href="#Coefficienti-pari-e-dispari">&#182;</a></h3><p>La relazione di ricorrenza collega solo coefficienti della stessa parità.</p>
 <p><strong>Coefficienti pari</strong>
